--- a/index.html
+++ b/index.html
@@ -7,37 +7,53 @@
   <title>dev.finance$</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
+
   <header>
-    <h1 id="logo">dev.finance$</h1>
+    <img src="./assets/logo.svg" alt="logo">
   </header>
+
   <main class="container">
     <section id="balance">
-      <h2>Balanço</h2>
+      <h2 class="sr-only">Balanço</h2>
       <div class="card">
-        <h3>Entradas</h3>
+        <h3>
+          <span>Entradas</span>
+          <img src="./assets/income.svg" alt="image_income">
+        </h3>
         <p>R$ 5.000,00</p>
       </div>
       <div class="card">
-        <h3>Saídas</h3>
+        <h3>
+          <span>Saídas</span>s
+          <img src="./assets/expense.svg" alt="image_expense">
+        </h3>
         <p>R$ 2.000,00</p>
       </div>
       <div class="card total">
-        <h3>Total</h3>
+        <h3>
+          <span>Total</span>
+          <img src="./assets/total.svg" alt="image_total">
+        </h3>
         <p>R$ 3.000,00</p>
       </div>
     </section>
+
     <section id="transaction">
-      <h2>Transações</h2>
+      <h2 class="sr-only">Transações</h2>
+      <a href="#" class="new button">+ Nova transação</a>
       <table id="data-table">
         <thead>
           <tr>
             <th>Descrição</th>
             <th>Valor</th>
             <th>Data</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -45,22 +61,31 @@
             <td class="description">Luz</td>
             <td class="expense">- R$ 500,00</td>
             <td class="date">23/01/2021</td>
+            <td>
+              <img src="./assets/minus.svg" alt="remover">
+            </td>
           </tr>
           <tr>
             <td class="description">Criação Web Site</td>
             <td class="income">R$ 5.000,00</td>
             <td class="date">23/01/2021</td>
+            <td>
+              <img src="./assets/minus.svg" alt="remover">
+            </td>
           </tr>
           <tr>
             <td class="description">Internet</td>
             <td class="expense">- R$ 200,00</td>
             <td class="date">23/01/2021</td>
+            <td>
+              <img src="./assets/minus.svg" alt="remover">
+            </td>
           </tr>
         </tbody>
-        </table>
+      </table>
     </section>
-
   </main>
+
   <footer>
     <p>dev.finance$</p>
   </footer>
